[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Extensions/UVHelperPack/elements/preview/Preview.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/UVHelperPack/elements/preview/HV.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/hue_shift_amount = null
shader_param/sat_shift_amount = null
shader_param/val_shift_amount = null

[node name="Preview" type="Panel"]
material = SubResource( 2 )
margin_right = 435.0
margin_bottom = 479.0
rect_min_size = Vector2( 150, 178 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 11.0
margin_right = -7.0
margin_bottom = -11.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
self_modulate = Color( 0.415686, 0.415686, 0.415686, 1 )
margin_right = 421.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Title" type="Label" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
mouse_filter = 0
text = "Hue/Value Preview"
align = 1
valign = 1

[node name="PreviewPanel" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 44.0
margin_right = 421.0
margin_bottom = 353.0
size_flags_vertical = 3

[node name="Settings" type="Panel" parent="VBoxContainer"]
margin_top = 357.0
margin_right = 421.0
margin_bottom = 457.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 11
alignment = 2

[node name="HVPreview" type="VBoxContainer" parent="VBoxContainer/Settings/VBoxContainer"]
margin_top = 17.0
margin_right = 421.0
margin_bottom = 69.0
__meta__ = {
"_edit_group_": true
}

[node name="H" type="HBoxContainer" parent="VBoxContainer/Settings/VBoxContainer/HVPreview"]
margin_right = 421.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/H"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
mouse_filter = 1
text = "Hue :"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/H"]
margin_left = 54.0
margin_top = 4.0
margin_right = 343.0
margin_bottom = 20.0
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -180.0
max_value = 180.0

[node name="HSpinBox" type="SpinBox" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/H"]
margin_left = 347.0
margin_right = 421.0
margin_bottom = 24.0
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
size_flags_vertical = 5
min_value = -180.0
max_value = 180.0

[node name="V" type="HBoxContainer" parent="VBoxContainer/Settings/VBoxContainer/HVPreview"]
margin_top = 28.0
margin_right = 421.0
margin_bottom = 52.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/V"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
mouse_filter = 1
text = "Value :"
align = 2
valign = 1

[node name="VSlider" type="HSlider" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/V"]
margin_left = 54.0
margin_top = 4.0
margin_right = 343.0
margin_bottom = 20.0
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
value = 70.0

[node name="VSpinBox" type="SpinBox" parent="VBoxContainer/Settings/VBoxContainer/HVPreview/V"]
margin_left = 347.0
margin_right = 421.0
margin_bottom = 24.0
hint_tooltip = "Hover this over the drawing to view it in Hue/Value Mode
Colors near black are hard to differentiate so use this preview (you can scale this preview from corners)"
size_flags_vertical = 5
min_value = -100.0
value = 70.0

[node name="MapPreview" type="VBoxContainer" parent="VBoxContainer/Settings/VBoxContainer"]
visible = false
margin_top = 31.0
margin_right = 421.0
margin_bottom = 69.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="VBoxContainer/Settings/VBoxContainer/MapPreview"]
margin_right = 421.0
margin_bottom = 14.0
align = 1
valign = 1

[node name="Load" type="Button" parent="VBoxContainer/Settings/VBoxContainer/MapPreview"]
margin_top = 18.0
margin_right = 421.0
margin_bottom = 38.0
text = "Load Preview"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Settings/VBoxContainer"]
margin_top = 80.0
margin_right = 421.0
margin_bottom = 100.0
text = "HV Preview"
align = 1
items = [ "HV Preview", null, false, 0, null, "Map Preview", null, false, 1, null ]
selected = 0

[connection signal="mouse_entered" from="." to="." method="_on_Main_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Main_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_Preview_visibility_changed"]
[connection signal="gui_input" from="VBoxContainer/ColorRect/Title" to="." method="_on_Title_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/PreviewPanel" to="." method="_on_PreviewPanel_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PreviewPanel" to="." method="_on_PreviewPanel_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/Settings/VBoxContainer/HVPreview/H/HSlider" to="." method="_on_Hue_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings/VBoxContainer/HVPreview/H/HSpinBox" to="." method="_on_Hue_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings/VBoxContainer/HVPreview/V/VSlider" to="." method="_on_Value_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings/VBoxContainer/HVPreview/V/VSpinBox" to="." method="_on_Value_value_changed"]
[connection signal="pressed" from="VBoxContainer/Settings/VBoxContainer/MapPreview/Load" to="." method="_on_Load_pressed"]
[connection signal="item_selected" from="VBoxContainer/Settings/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
